--- a/package.json
+++ b/package.json
@@ -16,12 +16,13 @@
     "react-router-dom": "^6.26.1"
   },
   "devDependencies": {
-    "@types/react": "^18.3.5",
-    "@types/react-dom": "^18.3.0",
-    "autoprefixer": "^10.4.19",
-    "postcss": "^8.4.41",
-    "tailwindcss": "^3.4.10",
-    "typescript": "^5.5.4",
-    "vite": "^5.4.2"
-  }
+  "@types/react": "^18.3.5",
+  "@types/react-dom": "^18.3.0",
+  "autoprefixer": "^10.4.19",
+  "postcss": "^8.4.41",
+  "tailwindcss": "^3.4.10",
+  "typescript": "^5.5.4",
+  "vite": "^5.4.2",
+  "@vitejs/plugin-react": "^4.3.1"
+}
 }
